force-app/main/default/objects/BarcodeAssignment__c/BarcodeAssignment__c.object-meta.xml
<CustomObject>
    <label>バーコード関連</label>
    <nameField>
        <displayFormat>BA-{00000000}</displayFormat>
        <label>バーコード関連 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>