force-app/main/default/objects/BarcodeAssignment__c/fields/barcode__c.field-meta.xml
<CustomField>
    <fullName>barcode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FBYコード</label>
    <referenceTo>Barcode__c</referenceTo>
    <relationshipLabel>バーコード関連付</relationshipLabel>
    <relationshipName>barcode_assignments</relationshipName>
    <type>Lookup</type>
</CustomField>