force-app/main/default/objects/BarcodeAssignment__c/fields/inventory_move_line__c.field-meta.xml
<CustomField>
    <fullName>inventory_move_line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>在庫移動明細</label>
    <referenceTo>InventoryMoveLine__c</referenceTo>
    <relationshipLabel>バーコード関連付</relationshipLabel>
    <relationshipName>barcode_assignments</relationshipName>
    <type>Lookup</type>
</CustomField>